# YC-Hackathon-11-15

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/services/: __init__.py  compression.py  effulgent_parser.py  ingestion.py  jcrew_parser.py  pipeline.py
data/: commerce.txt  commerce_cozy_knits.txt  commerce_jcrew.txt  effulgent_catalog.html  jcrew_mens_sweaters.html  mockup_merchant.html  sample_products.json
data/assets/: main-B9P2jWt9.js  mockup_app_page.js
scripts/: generate_commerce.py
tests/: test_effulgent_parser.py  test_jcrew_parser.py  test_pipeline.py
